--- a/assets/css/components/footer.css
+++ b/assets/css/components/footer.css
@@ -12,7 +12,7 @@
 	display: flex;
 	max-width: 1540px;
 	margin: auto;
-	background-image: url("../../assets/icon_home1/Footer\ BG\ 2.png");
+	background-image: url("../../icon_home1/Footer\ BG\ 2.png");
 	background-repeat: no-repeat;	
 	height: 704.37px;
 	background-size: cover;
@@ -32,7 +32,7 @@
 .footer_container-fluid {
 	width: 100%;
 	height: 704.37px;
-	background-image: url("../../assets/icon_home1/Footer\ BG\ 1.png");
+	background-image: url("../../icon_home1/Footer\ BG\ 1.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
