--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,19 +1,19 @@
 /* Components */
-@import url("./assets/css/components/header.css");
-@import url("./assets/css/components/slider.css");
-@import url("./assets/css/components/core.css");
-@import url("./assets/css/components/about.css");
-@import url("./assets/css/components/profession.css");
-@import url("./assets/css/components/contact.css");
-@import url("./assets/css/components/footer.css");
+@import url("/assets/css/components/header.css");
+@import url("/assets/css/components/slider.css");
+@import url("/assets/css/components/core.css");
+@import url("/assets/css/components/about.css");
+@import url("/assets/css/components/profession.css");
+@import url("/assets/css/components/contact.css");
+@import url("/assets/css/components/footer.css");
 
 /* Shares */
-@import url("./assets/css/shares/button.css");
-@import url("./assets/css/shares/card.css");
-@import url("./assets/css/shares/textbox.css");
+@import url("/assets/css/shares/button.css");
+@import url("/assets/css/shares/card.css");
+@import url("/assets/css/shares/textbox.css");
 
 /* Utils */
-@import url("./assets/css/util/reponsive.css");
+@import url("/assets/css/util/reponsive.css");
 
 
 :root {
